No fixed image height on mobile

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -78,6 +78,9 @@ a {
   .splash-head {
     font-size: 200%;
   }
+  .pure-img {
+    height: 500px;
+  }
 }
 
 .splash-subhead {
@@ -140,11 +143,6 @@ a.pure-button-primary {
 
 .l-box {
     padding: 1em;
-}
-
-.pure-img {
-  height: 400px;
-  padding-left: 2em;
 }
 
 .footer {
